# pyml_bindgen_stickytape_example

./: .ocamlformat  README.md  dune  dune-project  specs.txt  utils.ml  yo.ml
py/: interface.py
py/sparkles/: shimmer.py
test/: dune  test_yo.t
